@@ -9,7 +9,6 @@ general
 * End of support for compiling/running Cruise with JDK 1.3. New earliest supported JDK is 1.4.x.
 * Replace Xalan with Saxon.
 * Overhaul handling of threads, streams and logging when executing external processes.
-* cruisecontrol.bat didn't work if there were spaces in JAVA_HOME (CC-554)
 
 contrib
 ======================
@@ -72,11 +71,13 @@ CompositeBuilder
 cruisecontrol.bat
 ----------------------
 * Was failing to execute java when JAVA_HOME wasn't set (CC-492).
+* Was failing if there were spaces in JAVA_HOME (CC-554)
 
 CruiseControlConfig
 ----------------------
 * Allow properties inside of preconfigured template projects. Patch by Jerome Lacoste
 * Allow non-default projects to be registered as plugins. Alternative project implementations need to implement ProjectInterface.
+* Add include.projects tag as part of CC-266.
 
 CruiseControlController
 ----------------------
